--- a/webapp/src/main/webapp/resources/css/style.css
+++ b/webapp/src/main/webapp/resources/css/style.css
@@ -29,10 +29,7 @@ img {
 .elem-container {
     display: flex;
     flex-flow: row wrap;
-    align-items:   center !important;
-
-    padding-left: 12.5%;
-    padding-right: 12.5%;
+    justify-content: space-evenly;
 
 }
 
@@ -41,6 +38,8 @@ img {
     /*! flex-flow: row wrap; */
     /*! align-items: baseline; */
     margin: 1rem;
+    width: 100%;
+    max-width: 30rem;
 }
 
 
