Fixed flags not displaying on navbar.

--- a/webapp/src/main/webapp/resources/css/style.css
+++ b/webapp/src/main/webapp/resources/css/style.css
@@ -75,8 +75,9 @@ img {
 }
 
 .flag {
-    height: 40px;
-    width: 40px;
+    height: 35px;
+    width: 35px;
+    margin-left: 5px;
 }
 
 .formError{
