--- a/webapp/src/main/webapp/resources/css/style.css
+++ b/webapp/src/main/webapp/resources/css/style.css
@@ -66,7 +66,8 @@ img {
 .interest-column{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: right;
+    text-align: right;
 }
 
 
@@ -104,4 +105,10 @@ img {
 
 .gone {
     visibility: hidden;
+}
+
+.btn-red{
+    color: white;
+    background-color: red;
+    border-color: red;
 }
