Initial profile structure (very ugly)

--- a/webapp/src/main/webapp/resources/css/style.css
+++ b/webapp/src/main/webapp/resources/css/style.css
@@ -42,6 +42,10 @@ img {
     max-width: 30rem;
 }
 
+.profile-data {
+    display: flex;
+    flex-flow: column;
+}
 
 .carousel-image{
     height: 500px;
