--- a/webapp/src/main/webapp/resources/css/style.css
+++ b/webapp/src/main/webapp/resources/css/style.css
@@ -77,6 +77,7 @@ img {
     height: 35px;
     width: 35px;
     margin-left: 5px;
+    margin-right: 0.5rem;
 }
 
 .formError{
@@ -131,4 +132,18 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.studies {
+    height: 35px;
+    width: 35px;
+    margin-left: 5px;
+    margin-right: 0.5rem;
+}
+
+.birthday-date {
+    height: 30px;
+    width: 30px;
+    margin-left: 5px;
+    margin-right: 0.5rem;
 }
