--- a/webapp/src/main/webapp/resources/css/style.css
+++ b/webapp/src/main/webapp/resources/css/style.css
@@ -13,6 +13,7 @@ body {
     padding-top: 4.5rem;
     background-color: #5cc4b94d !important;
     align-items: center;
+    #padding-top: 50px;
 }
 
 img {
@@ -160,6 +161,60 @@ img {
 
 #page {
     margin: 0.3rem;
+}
+
+.dropdown.dropdown-lg .dropdown-menu {
+    padding: 6px 20px;
+}
+
+.input-group-btn .btn-group {
+    display: flex !important;
+    /*height: 100%;*/
+}
+.btn-group .btn {
+    border-radius: 0;
+}
+
+#selection-btn {
+    height: 100%;
+}
+
+.btn-group .btn:last-child {
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+.btn-group .form-horizontal .btn[type="submit"] {
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+
+.form-horizontal .form-group {
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.form-group .form-control:last-child {
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+
+@media screen and (min-width: 768px) {
+    #adv-search {
+        margin: 0 auto;
+    }
+    .dropdown.dropdown-lg {
+        position: static !important;
+    }
+    .dropdown.dropdown-lg .dropdown-menu {
+        min-width: 400px;
+    }
+}
+
+.btn-default {
+color: #333;
+background-color: #fff;
+border-color: #ccc;
 }
 
 #welcome {
