Align items in main container

--- a/webapp/src/main/webapp/resources/css/style.css
+++ b/webapp/src/main/webapp/resources/css/style.css
@@ -35,7 +35,16 @@ img {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
+}
 
+.elem-container::after {
+    content: "";
+    flex: auto;
+    display: flex;
+
+    margin: 1rem;
+    width: 100%;
+    max-width: 30rem;
 }
 
 .property-elem {
