--- a/webapp/src/main/webapp/resources/css/style.css
+++ b/webapp/src/main/webapp/resources/css/style.css
@@ -101,11 +101,24 @@ img {
     margin-right: 0.5rem;
 }
 
+
 .navbar-logo {
     height: 50px;
     width: 88px;
     /*margin-left: 5px;*/
     /*margin-right: 0.5rem;*/
+}
+
+.my-span {
+    height: 20px;
+    width: 20px;
+    margin-left: 5px;
+    margin-right: 0.5rem;
+}
+
+.my-badge {
+    line-height: normal;
+
 }
 
 .formError{
