Implemented notification popup and notifications page on the front end, Dao implementation isn't ready yet.

--- a/webapp/src/main/webapp/resources/css/style.css
+++ b/webapp/src/main/webapp/resources/css/style.css
@@ -277,3 +277,28 @@ border-color: #ccc;
     text-align:center;
 
 }
+
+.notifications-header{
+    font-size: medium;
+    font-weight: bold;
+    height: 30px;
+    text-align: center;
+
+}
+
+.notification{
+    height: 80px;
+}
+
+.notification-subject{
+    font-size: medium;
+    font-weight: bold;
+}
+
+.notification-text{
+}
+
+.notifications-footer{
+    height: 30px;
+    text-align: center;
+}
