Add global error handling check and create Internal Server Error page

--- a/webapp/src/main/webapp/resources/css/style.css
+++ b/webapp/src/main/webapp/resources/css/style.css
@@ -299,6 +299,8 @@ border-color: #ccc;
     color: grey;
     font-size: 1.4rem;
     text-align:center;
+    padding-left: 10%;
+    padding-right: 10%;
 
 }
 
