--- a/webapp/src/main/webapp/resources/css/style.css
+++ b/webapp/src/main/webapp/resources/css/style.css
@@ -31,21 +31,13 @@ img {
     margin: 0;
 }
 
-@supports (display: grid) {
-    .elem-container {
-        /*display:flex;*/
-        /*flex-flow: row wrap;*/
-        /*justify-content: space-evenly;*/
-        display: grid;
-        grid-template-columns: repeat(auto-fill, 30rem); /* 2 */
-        grid-gap: 1rem; /* 3 */
-        justify-content: space-between; /* 4 */
-        width: 85%;
-    }
-}
-
-@supports not (display: grid) {
-    .elem-container {
+.elem-container {
+    display: flex;
+    grid-template-columns: repeat(auto-fill, 30rem); /* 2 */
+    grid-gap: 1rem; /* 3 */
+    justify-content: space-between; /* 4 */
+    width: 85%;
+    .safari_only{
         display:flex;
         flex-flow: row wrap;
         justify-content: space-evenly;
