Changed ProposalState enum

--- a/webapp/src/main/webapp/resources/css/style.css
+++ b/webapp/src/main/webapp/resources/css/style.css
@@ -32,17 +32,16 @@ img {
 }
 
 .elem-container {
-    display: grid;
+    display: flex;
     grid-template-columns: repeat(auto-fill, 30rem); /* 2 */
     grid-gap: 1rem; /* 3 */
     justify-content: space-between; /* 4 */
     width: 85%;
-}
-
-.safari_only .elem-container{
-    display:flex;
-    flex-flow: row wrap;
-    justify-content: space-evenly;
+    .safari_only{
+        display:flex;
+        flex-flow: row wrap;
+        justify-content: space-evenly;
+    }
 }
 
 .my-elem-container {
