--- a/webapp/src/main/webapp/resources/css/style.css
+++ b/webapp/src/main/webapp/resources/css/style.css
@@ -32,7 +32,7 @@ img {
 }
 
 .elem-container {
-    display: flex;
+    display: grid;
     grid-template-columns: repeat(auto-fill, 30rem); /* 2 */
     grid-gap: 1rem; /* 3 */
     justify-content: space-between; /* 4 */
