Added message for proposal accepted by the property owner. Proposal image now shows up in gray-scale if the proposal has been declined, dropped or cancelled.

--- a/webapp/src/main/webapp/resources/css/style.css
+++ b/webapp/src/main/webapp/resources/css/style.css
@@ -22,6 +22,11 @@ img {
     object-fit: cover;
 }
 
+.grayscale {
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
+}
+
 .checkbox{
     padding-right:3px;
     padding-left:3px;
