--- a/webapp/src/main/webapp/resources/css/style.css
+++ b/webapp/src/main/webapp/resources/css/style.css
@@ -39,14 +39,10 @@ img {
 .elem-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, 30rem); /* 2 */
+    grid-template-rows: -webkit-max-content;
     grid-gap: 1rem; /* 3 */
     justify-content: space-between; /* 4 */
     width: 85%;
-    .safari_only{
-        display:flex;
-        flex-flow: row wrap;
-        justify-content: space-evenly;
-    }
 }
 
 .my-elem-container {
