Notifications are now marked as unread when opened, proposals now include a link to the property.

--- a/webapp/src/main/webapp/resources/css/style.css
+++ b/webapp/src/main/webapp/resources/css/style.css
@@ -305,7 +305,7 @@ border-color: #ccc;
 }
 
 .notification{
-    height: 80px;
+    height: 90px;
 }
 
 .notification-subject{
@@ -324,4 +324,8 @@ border-color: #ccc;
     display: flex;
     justify-content: center;
     margin:auto;
+}
+
+.unread{
+    background-color: #fffecc !important;
 }
